--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,13 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
+  testCompile "org.mockito:mockito-core:1.+"
   compile 'com.android.support:appcompat-v7:23.1.0'
   compile 'com.squareup.dagger:dagger:1.2.2'
   compile 'com.squareup.dagger:dagger-compiler:1.2.2'
   compile 'com.squareup.retrofit:retrofit:1.9.0'
   compile 'com.jakewharton:butterknife:7.0.1'
-
-
+  compile 'com.android.support:recyclerview-v7:23.1.0'
+  compile 'com.android.support:cardview-v7:23.1.0'
+  compile 'com.squareup.picasso:picasso:2.5.2'
 }
