--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.garcilomanuel.masterdetailmarvel">
+    package="com.garcilomanuel.masterdetailmarvel"
+    >
 
-  <application android:allowBackup="true"
+  <uses-permission android:name="android.permission.INTERNET"/>
+
+  <application
+      android:allowBackup="true"
       android:label="@string/app_name"
       android:name=".app.MarvelApp"
       android:icon="@mipmap/ic_launcher"
       android:supportsRtl="true"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      >
+
+
+    <activity android:name=".ui.main.view.MainActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+
+    <activity android:name=".ui.comicdetailcontainer.view.ComicDetailActivity"/>
 
   </application>
+
 
 </manifest>
